# algorithms

./: CMakeLists.txt  README.md
inc/: helper.h  misc.h  search.h  sort.h
src/: CMakeLists.txt  helper.c  main.c  misc.c  search.c  sort.c
